# memManager

./: License.txt  README.md  byteChain.h  memManager.h  memUnitMacro.h
ebManager/: demo.h
ebManager/HAL/: fileHAL.h
ebManager/internal/: base64.h  config.h  dataStructure.h  definitions.h  forwardDeclarations.h  includes.h  lowlevel.h  memUnitMacro.h  sfinae.h
ebManager/rapidjson/: rapidjson.h
ebManager/utf8/: utf8.h
ebManager/utf8/utf8/: checked.h
memManager/: demo.h  ebManager.h  memManager.h
memManager/HAL/: fileHAL.h  ioManager.h  ioManagerIncludes.h
memManager/HAL/ESP32-Example/: CMakeLists.txt  example_ble_server_throughput.c  example_ble_server_throughput.h  netif_extern_callback.h  sntp_extern_callback.h
memManager/HAL/ESP32-Example/ble_extern_callback/: ble_extern_callback.cpp  ble_extern_callback.h
memManager/HAL/ESP32-Example/client/: example_ble_client_throughput.c
memManager/HAL/ESP32-Example/wifi_extern_callback/: wifi_extern_callback.c  wifi_extern_callback.h
memManager/interal/: base64.h  config.h  dataStructure.h  definitions.h  forwardDeclarations.h  includes.h  lowlevel.h  memUnitMacro.h  sfinae.h
memManager/internal/: config.h  dataStructure.h  definitions.h  forwardDeclarations.h  includes.h  lowlevel.h  memUnitMacro.h  sfinae.h
memManager/utf8/: utf8.h
